--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,11 @@ code {
   margin: 20px;
 }
 
+.navActive {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+}
+
 .logo-home {
   max-width: 500px;
   max-height: auto;
