--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,11 @@ code {
   justify-content: space-between;
 }
 
+.header-home {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .logo-header {
   max-width: 100px;
   max-height: auto;
@@ -61,12 +66,13 @@ code {
   display: none;
 }
 
-.float {
-  float: right;
-}
-
 .home-background {
-  background-image: url("./images/background-green.png");
+  background-image: url("./images/board-games.jpg");
   background-size: cover;
   background-attachment: fixed;
+  height: 600px;
+}
+.background-green {
+  height: auto;
+  width: 100%;
 }
