--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,6 +52,7 @@ main {
 
 .nav-link {
   margin: 40px 0;
+  cursor: pointer;
 }
 
 .navActive {
@@ -91,6 +92,7 @@ main {
 
 .nav-link-home {
   margin: 0 20px;
+  cursor: pointer;
 }
 .logo-home {
   max-width: 300px;
@@ -124,6 +126,7 @@ main {
 
 .event-header {
 text-align: center;
+font-size: 48px;
 }
 
 .event-list {
@@ -134,18 +137,10 @@ width: 100%;
 justify-content: center;
 }
 
-.thumbtack-note {
-  background-image: url("./images/blank-thumbtack-note.png");
-  /* background-size: cover;
-  background-attachment: fixed; */
-  height: 100%;
-  width: 100%;
-}
-
 .card {
   font-size: 12px;
-  width: 275px;
-  height: 300px;
+  width: 300px;
+  height: 350px;
   margin: 10px;
   background-image: url("./images/blank-thumbtack-note.png");
   background-size: cover;
@@ -153,9 +148,39 @@ justify-content: center;
 
 .text-box {
   position: relative;
-  top: 50px;
+  top: 40px;
   left: 30px;
   width: 225px;
+  text-align: center;
+}
+
+.eventName {
+  margin-bottom: 5px;
+}
+
+.play-btn {
+  position: relative;
+  top: 40px;
+  left: 30px;
+  width: 225px;
+  text-align: center;
+}
+
+/* profile page */
+.button-box {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
+button {
+  border-radius: 10px;
+  padding: 3px;
+  background-color: rgb(29, 175, 29);
+}
+
+button:hover {
+background-color: greenyellow;
 }
 
 footer {
