--- a/client/src/index.css
+++ b/client/src/index.css
@@ -170,12 +170,19 @@ justify-content: center;
 .button-box {
   display: flex;
   justify-content: space-evenly;
+  background-color: black;
+  padding: 10px 0;
 }
 
-
-button {
+.button-box button {
   border-radius: 10px;
-  padding: 3px;
+  padding: 10px;
+  background-color:  black;
+  color: white;
+ 
+}
+
+ul button {
   background-color: rgb(29, 175, 29);
 }
 
