--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,11 +48,13 @@ main {
 	margin-right: 50px;
 	list-style-type: none;
 	flex-wrap: wrap;
+  
 }
 
 .nav-link {
 	margin: 40px 0;
 	cursor: pointer;
+  
 }
 
 .navActive {
@@ -185,7 +187,7 @@ link:hover {
 
 .profile-background h1 {
 	color: white;
-	padding: 0x;
+	padding: 0px;
 }
 
 .button-box {
@@ -245,6 +247,7 @@ button:hover {
 	/* width: 50%; */
 	margin: 35px;
 	background-image: url("./images/board-games.jpg");
+  border-radius: 20px;
 }
 
 .formGroup {
@@ -260,6 +263,7 @@ button:hover {
 	margin: 25px;
 	background-color: #ffffff;
 	opacity: 0.8;
+  border-radius: 20px;
 }
 
 .label {
