--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,26 +48,29 @@ main {
 	margin-right: 50px;
 	list-style-type: none;
 	flex-wrap: wrap;
-  
 }
 
 .nav-link {
 	margin: 40px 0;
 	cursor: pointer;
-  
 }
 
 .navActive {
 	color: black;
-  border: 2px solid rgb(53, 30, 8);
-  padding: 5px 10px;
-  text-decoration: none !important;
+	/* border: 2px solid rgb(53, 30, 8); */
+	background-color: greenyellow;
+	border-radius: 20px;
+	padding: 15px 20px;
+	text-decoration: none !important;
+}
+
+link {
+	color: rgb(29, 175, 29);
 }
 
 link:hover {
-  color: black;
-  text-decoration: none;
-
+	color: black;
+	text-decoration: none;
 }
 
 .background-cork {
@@ -201,7 +204,7 @@ link:hover {
 .button-box button {
 	border-radius: 10px;
 	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: rgba(255, 255, 255, 0.8);
 	border: none;
 	color: black;
 	font-weight: 900;
@@ -213,11 +216,11 @@ ul button {
 }
 
 .list-button {
-  border: 2px solid rgb(53, 30, 8);
+	border: 2px solid rgb(53, 30, 8);
 }
 .list-btn:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-  border: 2px solid rgb(53, 30, 8);
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 2px solid rgb(53, 30, 8);
 }
 
 button:hover {
@@ -247,7 +250,7 @@ button:hover {
 	/* width: 50%; */
 	margin: 35px;
 	background-image: url("./images/board-games.jpg");
-  border-radius: 20px;
+	border-radius: 20px;
 }
 
 .formGroup {
@@ -263,7 +266,7 @@ button:hover {
 	margin: 25px;
 	background-color: #ffffff;
 	opacity: 0.8;
-  border-radius: 20px;
+	border-radius: 20px;
 }
 
 .label {
@@ -286,13 +289,17 @@ button:hover {
 }
 .loginBtn {
 	position: relative;
-	top: 10px;
+	display: flex;
+  top: 10px;
 	width: 225px;
 	text-align: center;
 	background-color: rgb(29, 175, 29);
 	border-radius: 10px;
 	font-size: 24px;
-	opacity: 1.0;
+	color: black;
+	opacity: .8;
+  justify-content: center;
+  /* box-shadow: 10px 3px 3px greenyellow; */
 }
 
 .login-background {
