--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,6 +87,7 @@ link:hover {
 .header-home {
 	display: flex;
 	justify-content: flex-end;
+ 
 }
 .nav-header-home {
 	display: flex;
@@ -97,15 +98,28 @@ link:hover {
 }
 
 .nav-home {
-	float: right;
 	list-style-type: none;
 	text-align: right;
+  position: absolute;
+  top: 250px;
+  left: 100px;
 }
 
 .nav-link-home {
-	margin: 0 20px;
+	margin: 20px 0;
 	cursor: pointer;
+  background-color: rgb(14, 240, 165);
+  padding: 20px;
+  /* min-height: 50px; */
+  /* background-image: url("./images/red-dice.png"); */
+  background-size: cover;
+	/* background-attachment: fixed; */
 }
+
+.link-tex {
+  margin-top: 25px;
+}
+
 .logo-home {
 	max-width: 300px;
 	max-height: auto;
