--- a/client/src/index.css
+++ b/client/src/index.css
@@ -230,8 +230,7 @@ ul button {
 	border: 2px solid rgb(53, 30, 8);
 }
 .list-btn:hover {
-	background-color: rgba(255, 255, 255, 0.3);
-	border: 2px solid rgb(53, 30, 8);
+	background-color: greenyellow;
 }
 
 button:hover {
