--- a/client/src/index.css
+++ b/client/src/index.css
@@ -225,10 +225,7 @@ ul button {
 	border-radius: 10px;
 }
 
-.list-button {
-	border: 2px solid rgb(53, 30, 8);
-	background-color: greenyellow;
-}
+
 .list-btn:hover {
 	background-color: greenyellow;
 }
@@ -237,6 +234,9 @@ button:hover {
 	background-color: greenyellow;
 }
 
+.selectEvents {
+	background-color: greenyellow;
+}
 /* Login/signup pages */
 .loginForm {
 	display: flex;
