links added to developer names in footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,15 +37,18 @@
   }
 }
 
-.footer-links {
+/* .footer-links {
   font-size: xx-large;
-}
-
+} */
+/* 
 .footer-wrapper{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+  padding: 5px;
+} */
 
-
+/* .footer-text {
+  text-decoration: none;
+  } */
