--- a/client/src/index.css
+++ b/client/src/index.css
@@ -348,6 +348,18 @@ button:hover {
 	padding: 0x;
 }
 
+.addEventHeader {
+	text-align: center;
+}
+.mapLink {
+	text-decoration: none;
+	font-style: italic;
+}
+.mapLink:hover {
+	font-weight: bold;
+	color: rgb(29, 175, 29)
+}
+
 footer {
 	text-align: center;
 }
