--- a/client/src/index.css
+++ b/client/src/index.css
@@ -110,7 +110,7 @@ link:hover {
 	/* background-color: rgb(14, 240, 165); */
 	padding: 20px;
 	border-radius: 10px;
-	min-height: 50px;
+	min-height: 100px;
 	background-image: url("./images/red-dice.png");
 	background-size: cover;
 	/* background-attachment: fixed; */
@@ -164,8 +164,9 @@ link:hover {
 	width: 300px;
 	height: 350px;
 	margin: 10px;
-	background-image: url("./images/blank-thumbtack-note.png");
+	background: url("./images/blank-thumbtack-note.png");
 	background-size: cover;
+	border: none;
 }
 
 .text-box {
@@ -178,7 +179,8 @@ link:hover {
 }
 
 .eventName {
-	margin-bottom: 5px;
+	margin: 20px 0 5px 0;
+	font-size: 20px; 
 }
 
 .play-btn, .edit-btn {
