--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,7 +108,7 @@ link:hover {
 	margin: 20px 0;
 	cursor: pointer;
 	/* background-color: rgb(14, 240, 165); */
-	padding: 40px;
+	padding: 20px;
 	border-radius: 10px;
 	min-height: 100px;
 	background-image: url("./images/red-dice.png");
@@ -164,8 +164,9 @@ link:hover {
 	width: 300px;
 	height: 350px;
 	margin: 10px;
-	background-image: url("./images/blank-thumbtack-note.png");
+	background: url("./images/blank-thumbtack-note.png");
 	background-size: cover;
+	border: none;
 }
 
 .text-box {
@@ -179,9 +180,12 @@ link:hover {
 
 .eventName {
 	margin-bottom: 5px;
+	margin-top: 20px;
+	font-size: 20px;
 }
 
-.play-btn, .edit-btn {
+.play-btn,
+.edit-btn {
 	position: relative;
 	top: 40px;
 	left: 30px;
@@ -225,7 +229,6 @@ ul button {
 	background-color: rgb(29, 175, 29);
 	border-radius: 10px;
 }
-
 
 .list-btn:hover {
 	background-color: greenyellow;
@@ -357,7 +360,7 @@ button:hover {
 }
 .mapLink:hover {
 	font-weight: bold;
-	color: rgb(29, 175, 29)
+	color: rgb(29, 175, 29);
 }
 
 footer {
