refetch profile page & no events message

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -460,6 +460,11 @@ button:hover {
 	background-color: greenyellow;
 }
 
+.center {
+	display: flex;
+	justify-content: center;
+}
+
 footer {
 	text-align: center;
 }
